--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,4 +41,60 @@
     <servlet-name>userInfo</servlet-name>
     <url-pattern>/userInfo</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <servlet-name>movieInfo</servlet-name>
+    <servlet-class>com.servlet.MovieInfo</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>movieInfo</servlet-name>
+    <url-pattern>/movieInfo</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>score</servlet-name>
+    <servlet-class>com.servlet.Score</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>score</servlet-name>
+    <url-pattern>/score</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>getLike</servlet-name>
+    <servlet-class>com.servlet.GetLike</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>getLike</servlet-name>
+    <url-pattern>/getLike</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>recommend</servlet-name>
+    <servlet-class>com.servlet.Recommend</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>recommend</servlet-name>
+    <url-pattern>/recommend</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>movieInfoApi</servlet-name>
+    <servlet-class>com.servlet.MovieInfoApi</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>movieInfoApi</servlet-name>
+    <url-pattern>/movieInfoApi</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>recommendByLike</servlet-name>
+    <servlet-class>com.servlet.RecommendByLike</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>recommendByLike</servlet-name>
+    <url-pattern>/recommendByLike</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>topN</servlet-name>
+    <servlet-class>com.servlet.TopN</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>topN</servlet-name>
+    <url-pattern>/topN</url-pattern>
+  </servlet-mapping>
 </web-app>
