--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,12 @@
             <artifactId>commons-collections</artifactId>
             <version>3.2</version>
         </dependency>
+
+      <dependency>
+          <groupId>com.alibaba</groupId>
+          <artifactId>fastjson</artifactId>
+          <version>1.2.15</version>
+      </dependency>
   </dependencies>
   <build>
     <finalName>recommend3</finalName>
